src/test/ui/const-generics/const-argument-cross-crate-mismatch.min.stderr
error[E0308]: mismatched types
  --> $DIR/const-argument-cross-crate-mismatch.rs:9:67
   |
LL |     let _ = const_generic_lib::function(const_generic_lib::Struct([0u8, 1u8]));
   |                                                                   ^^^^^^^^^^ expected an array with a fixed size of 3 elements, found one with 2 elements

error[E0308]: mismatched types
  --> $DIR/const-argument-cross-crate-mismatch.rs:11:65
   |
LL |     let _: const_generic_lib::Alias = const_generic_lib::Struct([0u8, 1u8, 2u8]);
   |                                                                 ^^^^^^^^^^^^^^^ expected an array with a fixed size of 2 elements, found one with 3 elements

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
